--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 
 <body>
     <h1>Git Basics</h1>
+    <p>
+        <ol>
+            <li>git config --global user.name "any"</li>
+            <li>git config --global user.email "any@email.com"</li>
+            <li>git init</li>
+            <li>ls -lart</li>
+            <li>git add . or git add -A</li>
+            <li>git status</li>
+            <li>git commit -m "message"</li>
+            <li>touch abc.html</li>
+            <li>git branch</li>
+            <li>git branch _branchname_</li>
+            <li>git checkout _branchname_</li>
+        </ol>
+    </p>
 </body>
 
 </html>
