new-feature commit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li>git branch</li>
             <li>git branch _branchname_</li>
             <li>git checkout _branchname_</li>
+            <li>git checkout -b _branchname_</li>
+            <li>git merge feature <strong>@ master branch</strong></li>
+            <li>git branch -d _branchname_</li>
         </ol>
     </p>
 </body>
