--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
 <body>
     <h1>Git Basics</h1>
     <p>
-        <ol>
-            <li>git config --global user.name "any"</li>
-            <li>git config --global user.email "any@email.com"</li>
-            <li>git init</li>
-            <li>ls -lart</li>
-            <li>git add . or git add -A</li>
-            <li>git status</li>
-            <li>git commit -m "message"</li>
-            <li>touch abc.html</li>
-            <li>git branch</li>
-            <li>git branch _branchname_</li>
-            <li>git checkout _branchname_</li>
-            <li>git checkout -b _branchname_</li>
-            <li>git merge feature <strong>@ master branch</strong></li>
-            <li>git branch -d _branchname_</li>
-        </ol>
+    <ol>
+        <li>git config --global user.name "any"</li>
+        <li>git config --global user.email "any@email.com"</li>
+        <li>git init</li>
+        <li>ls -lart</li>
+        <li>git add . or git add -A</li>
+        <li>git status</li>
+        <li>git commit -m "message"</li>
+        <li>touch abc.html</li>
+        <li>git branch</li>
+        <li>git branch _branchname_</li>
+        <li>git checkout _branchname_</li>
+        <li>git checkout -b _branchname_</li>
+        <li>git merge feature <strong>@ master branch</strong></li>
+        <li>git branch -d _branchname_</li>
+    </ol>
+    <pre>
+    git remote add origin https://github.com/SHVM-09/git-basics.git
+    git branch -M main
+    git push -u origin main
+    </pre>
     </p>
 </body>
 
