commit after git pull

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     git branch -M main
     git push -u origin main
     </pre>
+    <pre>
+        mkdir "dir_name"
+        cd dir_name
+        git clone
+        git push origin main
+        git pull origin main
+    </pre>
     </p>
 </body>
 
